--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
   ],
   "scripts": {
     "dev": "unbuild --stub",
-    "build": "unbuild",
-    "test": "vitest"
+    "build": "unbuild"
   },
   "devDependencies": {
     "typescript": "^4.9.3",
     "unbuild": "^1.0.1",
-    "vitest": "^0.25.3",
     "eslint": "^8.33.0",
     "@kovsu/eslint-config-ts": "^0.2.0"
   },
